2014-08-10  JJ Merelo  <jmerelo@amy>

	* lib/Test/Text.pm (done_testing): Managed to make it work with
	UTF8 dictionaries, passing now tests. Will try to use it in actual
	CI for my latest book

2014-08-08  JJ Merelo  <jmerelo@amy>

	* lib/Test/Text.pm: Added text and data for Spanish. 

2014-05-01  Juan J. Merelo Guervós  <jjmerelo@gmail.com>

	* MANIFEST: Changing manifest for the new version

Revision history for Text-Hoborg

0.0.1  Mon May 27 07:59:10 2013
       Initial release.
