@@ -43,5 +43,5 @@
       }
    },
    "release_status" : "stable",
-   "version" : "v0.1.3"
+   "version" : "v0.1.5"
 }
