@@ -1,5 +1,9 @@
 #Literatura dirigida por pruebas
 
-Tenía que pasar. Tarde o temprano, alguien iba a sacar lo de la literatura-como-desarrollo de software, y una vez que se llega a eso, SCRUM, kanban y ese tipo de metodologías no podían estar demasiado lejos. En ello estamos.
+Tenía que pasar. Tarde o temprano, alguien iba a sacar lo de la
+literatura-como-desarrollo de software, y una vez que se llega a eso,
+SCRUM, kanban y ese tipo de metodologías no podían estar demasiado
+lejos. ¿O lo estaban? En ello estamos.
 
-Quizás debería de haber metido más cosas con acentos. 
+Quizás debería de haber metido más cosas con acentos. Esta es la 2ª
+vez que lo hago.
